# MineScale

./: .gitignore  BUILD.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SPEC.md
client/: Cargo.toml
client/src/: cli.rs  coord.rs  crypto.rs  diag.rs  host.rs  join.rs  lan.rs  lib.rs  main.rs  relay.rs  stun.rs  telemetry.rs  tunnel.rs
gui/: Cargo.toml  build.rs
gui/src/: app.rs  main.rs
nat-scanner/: README.md  nat_scanner.py
scripts/: build-all.sh  publish-winget.sh
server/: Cargo.toml
server/src/: api.rs  main.rs  rate_limit.rs  relay.rs  rooms.rs  telemetry.rs
