[workspace]
members = ["client", "server"]
resolver = "2"

[workspace.dependencies]
tokio       = { version = "1",    features = ["full"] }
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
anyhow      = "1"
thiserror   = "1"
tracing     = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand        = "0.8"
base64      = { version = "0.22", features = ["std"] }
bytes       = "1"
