[package]
name        = "mc-share-gui"
version     = "1.2.8"
edition     = "2021"
description = "MineScale-Java — GUI client"

[[bin]]
name = "mc-share-gui"
path = "src/main.rs"

# build.rs embeds Windows PE version info into the .exe so winget /
# wingetcreate / Explorer Properties show ProductName, Version, etc.
[build-dependencies]
winresource = "0.1"

[dependencies]
mc-share = { path = "../client" }

tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }

eframe = { version = "0.28", default-features = false, features = [
    "default_fonts", "glow", "x11", "wayland",
] }
egui = "0.28"

tokio-util         = { version = "0.7", features = ["rt"] }
tracing-subscriber = { workspace = true }
arboard            = "3"
