[package]
name        = "mc-share-server"
version     = "1.2.5"
edition     = "2021"
description = "MineScale-Java Coordination + Relay Server"

[[bin]]
name = "mc-share-server"
path = "src/main.rs"

[dependencies]
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
rand               = { workspace = true }
base64             = { workspace = true }
bytes              = { workspace = true }

axum         = { version = "0.7", features = ["macros"] }
tower        = "0.4"
tower-http   = { version = "0.5", features = ["trace", "cors"] }
dashmap      = "5"
governor     = { version = "0.6", features = ["std"] }
tokio-util   = { version = "0.7", features = ["codec"] }
sha2         = "0.10"
socket2      = { version = "0.5", features = ["all"] }
